Redirect to index.html if 404

--- a/nginx.conf
+++ b/nginx.conf
@@ -54,6 +54,9 @@ http {
     listen 3000;
     root /www;
     location / {
+        if (!-e $request_filename){
+            rewrite ^(.*)$ /index.html break;
+        }
     }
   }
 }
