--- a/nginx.conf
+++ b/nginx.conf
@@ -51,6 +51,8 @@ http {
     video/x-mng                           mng;
   }
   server {
+    gzip on;
+    gzip_types text/plain text/css text/html application/x-javascript application/javascript;
     listen 3000;
     root /www;
     location / {
