Remove explicit text/html mime type

--- a/nginx.conf
+++ b/nginx.conf
@@ -52,7 +52,7 @@ http {
   }
   server {
     gzip on;
-    gzip_types text/plain text/css text/html application/x-javascript application/javascript;
+    gzip_types text/plain text/css application/x-javascript application/javascript;
     listen 3000;
     root /www;
     location / {
