Switch to npx and language generic

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 dist: trusty
 sudo: required
+language: generic
 notifications:
   email:
     on_success: change
     on_failure: change
 auth: &Auth |
-  npm i -g travis-env && eval "$(travis-env)"
+  eval "$(npx travis-env)"
   echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 jobs:
   include:
